# eilmeldung

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/: pull_request_template.md
HomebrewFormula/: eilmeldung.rb
docs/: commands.md  configuration.md  faq.md  keybindings.md  queries.md
examples/: default-config.toml  light-ansi-palette.toml
nix/: package.nix
src/: main.rs
src/config/: input_config.rs  mod.rs  theme.rs
src/input/: mod.rs
src/messages/: event.rs
src/messages/command/: mod.rs  parse.rs
src/query/: mod.rs  parse.rs
src/ui/: batch.rs  mod.rs  mouse.rs  view.rs
src/ui/article_content/: mod.rs
src/ui/articles_list/: mod.rs  model.rs  view.rs
src/ui/feeds_list/: feed_list_item.rs  mod.rs  model.rs  view.rs
