[package]
name = "eilmeldung"
version = "1.2.0"
edition = "2024"
description = "a feature-rich TUI RSS Reader based on the news-flash library"
homepage = "https://github.com/christo-auer/eilmeldung"
repository = "https://github.com/christo-auer/eilmeldung"
license = "GPL-3.0-or-later"
keywords = [ "rss", "tui", "news", "newsflash" ]
categories = [ "command-line-utilities" ]
publish = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control" ] }
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.17"
derive = "1.0.0"
directories = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
getset = "0.1.6"
htmd = "0.3.0"
htmlescape = "0.3.1"
if-watch = { version = "3.2.1", features = ["tokio"] }
image = "0.25.9"
indexmap = { version = "2.12.1", features = ["serde"] }
inquire = "0.9.1"
itertools = "0.14.0"
libc = "0.2"
log = "0.4.28"
logos = "0.15.1"
news-flash = { version = "3.0.0", features = ["image-downloader"] }
once_cell = "1.21.3"
openssl = { version = "0.10.75", features = ["vendored"] }
parse_datetime = "0.13.1"
percent-encoding = "2.3.2"
ratatui = { version = "0.30.0", features = ["all-widgets", "palette", "serde"] }
ratatui-image = { version = "10.0.4", default-features = false, features = ["serde", "tokio"] }
ratatui-textarea = "0.8.0"
regex = "1.12.2"
reqwest = { version = "0.13", default-features = false, features = ["http2", "charset", "brotli"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_toml = "0.0.1"
shell-words = "1.1.1"
strfmt = "0.2.5"
string_manipulation_utf8 = "0.3.0"
strum = { version = "0.27.2", features = ["derive", "strum_macros"] }
termimad = "0.34.0"
text-splitter = { version = "0.28.0", features = ["markdown"] }
thiserror = "2.0.17"
throbber-widgets-tui = "0.10.0"
tokio = { version = "1.47.1", features = ["macros", "tokio-macros", "time" ] }
toml = "0.9.10"
tui-logger = { version = "0.17.3", features = ["crossterm"] }
tui-markdown = "0.3.7"
tui-prompts = "0.5.2"
tui-tree-widget = "0.24.0"
url = "2.5.7"
webbrowser = "1.0.5"

[dev-dependencies]
claims = "0.8.0"
rstest = "0.26.1"
serde_assert = "0.8.0"
